--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500,600,700,800,900,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500,600,700,800,900,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=l8LZUj"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=l8LZUj" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=JUTFua"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=JUTFua" type="text/css">
 
   
   
@@ -36,7 +36,7 @@
   <section data-bs-version="5.1" class="menu menu6 cid-uFLBKyvW8U" once="menu" id="menu06-1x">
 	
 
-	<nav class="navbar navbar-dropdown opacityScroll navbar-fixed-top navbar-expand-lg">
+	<nav class="navbar navbar-dropdown opacityScrollOff navbar-fixed-top navbar-expand-lg">
 		<div class="container">
 			<div class="navbar-brand">
 				<span class="navbar-logo">
@@ -54,7 +54,7 @@
 					<span></span>
 				</div>
 			</button>
-			<div class="collapse navbar-collapse opacityScroll" id="navbarSupportedContent">
+			<div class="collapse navbar-collapse opacityScrollOff" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
 						<a class="nav-link link text-black text-primary display-4" href="index.html">Home</a>
 					</li>
@@ -502,7 +502,7 @@
                 </div>
             </div>
             <div class="map-wrapper col-md-12 col-lg-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB7QWkvlxV39ZsyKvhZRjPGVqlJFvxxNkw&amp;q= 182 TAGORE LANE, SINGAPORE 787581" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBQ55g-IgRRgXrd803PTWDTb7kd6aAitNQ&amp;q= 182 TAGORE LANE, SINGAPORE 787581" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
