--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500,600,700,800,900,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500,600,700,800,900,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=4UGrQ9"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=4UGrQ9" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=zDXaVu"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=zDXaVu" type="text/css">
 
   
   
@@ -495,14 +495,14 @@
                             <strong>Contact Us</strong>
                         </h5>
                         <ul class="list mbr-fonts-style display-7">
-                            <li class="mbr-text item-wrap"><span style="font-size: 1.4rem;">Phone/Whatsapp: <a href="https://wa.me/6588342436" class="text-warning text-primary">+65 8834 2436</a></span></li><li class="mbr-text item-wrap"><span style="font-size: 1.4rem;">Email: </span><a href="mailto:sales.sgevent@gmail.com" class="text-warning" style="font-size: 1.4rem;">sales.sgevent@gmail.com</a><br></li>
+                            <li class="mbr-text item-wrap"><span style="font-size: 1.4rem;">Phone/Whatsapp: <a href="https://wa.me/6588324326" class="text-warning text-primary">+65 8832 4326</a></span></li><li class="mbr-text item-wrap"><span style="font-size: 1.4rem;">Email: </span><a href="mailto:sales.sgevent@gmail.com" class="text-warning" style="font-size: 1.4rem;">sales.sgevent@gmail.com</a><br></li>
                             <li class="mbr-text item-wrap">Address: 182 Tagore Lane, Singapore 787581</li><li class="mbr-text item-wrap"><br></li>
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="map-wrapper col-md-12 col-lg-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB7QWkvlxV39ZsyKvhZRjPGVqlJFvxxNkw&amp;q= 182 TAGORE LANE, SINGAPORE 787581" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDbnCmnHmtigIYiD8jIfeHQv7gW2ANhHD4&amp;q= 182 TAGORE LANE, SINGAPORE 787581" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
@@ -521,7 +521,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3819504" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3819504" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">Free AI Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
