--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500,600,700,800,900,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500,600,700,800,900,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=WCbiop"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=WCbiop" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=U5Rw2M"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=U5Rw2M" type="text/css">
 
   
   
@@ -59,7 +59,7 @@
 						<a class="nav-link link text-black text-primary display-4" href="index.html">Home</a>
 					</li>
 					<li class="nav-item dropdown">
-						<a class="nav-link link dropdown-toggle text-black show display-4" href="https://sgevent.com.sg/services" aria-expanded="false" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside">Our Services</a><div class="dropdown-menu show" aria-labelledby="dropdown-297" data-bs-popper="none"><a class="dropdown-item text-black text-primary display-4" href="eventmanagement.html">Event Management</a><a class="show dropdown-item text-black text-primary display-4" href="roadshowvenue.html">Roadshow Venue</a><a class="show dropdown-item text-black text-primary display-4" href="warehouse.html">Warehousing Solutions</a><a class="show dropdown-item text-black text-primary display-4" href="equipmentrental.html">Equipment Rental</a><a class="show dropdown-item text-black text-primary display-4" href="corporategifts.html">Corporate Gifts</a></div>
+						<a class="nav-link link dropdown-toggle text-black display-4" href="https://sgevent.com.sg/services" aria-expanded="false" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside">Our Services</a><div class="dropdown-menu" aria-labelledby="dropdown-297"><a class="dropdown-item text-black text-primary display-4" href="eventmanagement.html">Event Management</a><a class="show dropdown-item text-black text-primary display-4" href="roadshowvenue.html">Roadshow Venue</a><a class="show dropdown-item text-black text-primary display-4" href="warehouse.html">Warehousing Solutions</a><a class="show dropdown-item text-black text-primary display-4" href="equipmentrental.html">Equipment Rental</a><a class="show dropdown-item text-black text-primary display-4" href="corporategifts.html">Corporate Gifts</a></div>
 					</li><li class="nav-item"><a class="nav-link link show text-black text-primary display-4" href="pastprojects.html">Past Projects</a></li>
 					<li class="nav-item">
 						<a class="nav-link link text-black text-primary display-4" href="index.html#contacts02-1q">Contact</a>
@@ -80,10 +80,10 @@
     <div class="row justify-content-center">
       <div class="col-md-12 content-head">
         <h1 class="mbr-section-title mbr-fonts-style mb-4 display-1"><strong>SG EVENT</strong></h1>
-        <p class="mbr-text mbr-fonts-style mb-4 display-5">
-          Your events partner to Solutions &amp; Greatness
-        </p>
-        
+        <p class="mbr-text mbr-fonts-style mb-4 display-5"><strong>
+          Your events partner to Solutions &amp; Greatness</strong><br><strong>
+        </strong><br>From concept to execution, we handle every detail so you can focus on what matters most - your guests and objectives.<br></p>
+        <div class="mbr-section-btn mt-4"><a class="btn btn-info display-7" href="index.html#contacts02-1q">Get a Quote</a></div>
       </div>
     </div>
   </div>
@@ -105,9 +105,24 @@
             </div>
             <div class="col-12 col-lg col-md-12">
               <div class="text-wrapper align-left">
-                <h1 class="mbr-section-title mbr-fonts-style mb-4 display-2"><strong>Effortless Events with Expert Solutions</strong></h1>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">
-                  Why juggle multiple vendors when we provide seamless, end-to-end event solutions? From concept to execution, our agile team delivers flawless setups on time, while our in-house production crafts custom structures and immersive brand experiences.<br><br> Trust us for <strong>event management</strong>, <strong>roadshow venue</strong>,&nbsp;<strong>warehousing solutions</strong>, <strong>equipment rental</strong>, and <strong>corporate gifts&nbsp;</strong>—we make events happen effortlessly!<br>
+                <h1 class="mbr-section-title mbr-fonts-style mb-4 display-1"><strong>Transforming Visions into Unforgettable Experiences</strong></h1>
+                <p class="mbr-text mbr-fonts-style mb-4 display-7">Behind every successful event lies countless hours of planning, coordination, and execution. At SG Event, we've mastered the art of making the complex appear effortless. Our integrated approach combines creative design, technical expertise, and flawless logistics to deliver experiences that captivate audiences and exceed expectations.
+<br>
+<br>With our team handling every detail—from venue transformation to technical production—you're free to focus on what matters most: connecting with your guests and achieving your objectives. Our proprietary event management system ensures nothing falls through the cracks, while our dedicated project managers provide single-point accountability throughout your journey.
+<br>
+<br>Our Comprehensive Event Ecosystem:
+<br>
+<br>• Strategic Event Design – Crafting experiences aligned with your brand and objectives
+<br>
+<br>• Venue Transformation – Converting ordinary spaces into extraordinary environments
+<br>
+<br>• Technical Production – State-of-the-art audiovisual and interactive solutions
+<br>
+<br>• Logistics Command Center – Seamless coordination of all moving parts
+<br>
+<br>• Post-Event Analytics – Measuring impact and ROI to inform future strategies
+<br>
+<br>Get Your Free Consultation!<br>
                 </p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-lg btn-warning display-7" href="index.html#contacts02-1q">Contact Us</a></div>
               </div>
@@ -495,8 +510,9 @@
                             <strong>Contact Us</strong>
                         </h5>
                         <ul class="list mbr-fonts-style display-7">
-                            <li class="mbr-text item-wrap"><span style="font-size: 1.4rem;">Phone/Whatsapp: <a href="https://wa.me/6588324326" class="text-warning text-primary">+65 8832 4326</a></span></li><li class="mbr-text item-wrap"><span style="font-size: 1.4rem;">Email: </span><a href="mailto:sales.sgevent@gmail.com" class="text-warning" style="font-size: 1.4rem;">sales.sgevent@gmail.com</a><br></li>
-                            <li class="mbr-text item-wrap">Address: 182 Tagore Lane, Singapore 787581</li><li class="mbr-text item-wrap"><br></li>
+                            <li class="mbr-text item-wrap"><span style="font-size: 1.4rem;">📞Phone/Whatsapp: <a href="https://wa.me/6588324326" class="text-warning text-primary">+65 8832 4326</a></span></li><li class="mbr-text item-wrap"><span style="font-size: 1.4rem;">📧Email: </span><a href="mailto:sales.sgevent@gmail.com" class="text-warning" style="font-size: 1.4rem;">sales.sgevent@gmail.com</a><br></li>
+                            <li class="mbr-text item-wrap">📍Address: 182 Tagore Lane, Singapore 787581</li><li class="mbr-text item-wrap">Operating Hours:
+</li><li class="mbr-text item-wrap">Monday – Friday 11:00 AM - 6:00 PM</li><li class="mbr-text item-wrap"><br></li>
                         </ul>
                     </div>
                 </div>
@@ -517,11 +533,11 @@
     <div class="container">
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
-                <p class="mbr-text mb-0 mbr-fonts-style display-7">&nbsp;SG Event Pte Ltd&nbsp;• GST Reg 202209554D</p>
+                <p class="mbr-text mb-0 mbr-fonts-style display-7">© SG Event Pte Ltd. GST Registration: 202209554D. All right reserved.</p>
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3819504" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-generator.html">AI Website Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3819504" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/html-builder.html">HTML Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
