--- a/eventmanagement.html
+++ b/eventmanagement.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500,600,700,800,900,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500,600,700,800,900,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=iRdt9n"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=iRdt9n" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=T6pNNU"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=T6pNNU" type="text/css">
 
   
   
